--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,41 +1,1 @@
-<app-details [display]="detailsDialogOpened" [_doctor]="selectedDoctor" (handleClose)="onCloseDetailsDialog()" (handleSave)="onUpdateDetails($event)"></app-details>
-
-<div class="content ui-g">
-
-  <div class="ui-g-12">
-    <p-dropdown [styleClass]="'select'" [showClear]="true" [options]="cities" [(ngModel)]="selectedCity" optionLabel="name" placeholder="City" (onChange)="onSelectCity($event)"></p-dropdown>
-  </div>
-
-  <div class="ui-g-12">
-    <p-dropdown [styleClass]="'select'" [showClear]="true" [options]="professions" [(ngModel)]="selectedProfession" optionLabel="name" placeholder="Profession" (onChange)="onSelectProfession($event)"></p-dropdown>
-  </div>
-
-  <div class="ui-g-12">
-      <p-table *ngIf="filteredDoctors.length !== 0" [value]="filteredDoctors" [styleClass]="'table'">
-          <ng-template pTemplate="header">
-              <tr>
-                  <th>Doctor Name</th>
-                  <th>City</th>
-                  <th>Profession</th>
-                  <th>Rating</th>
-                  <th></th>
-              </tr>
-          </ng-template>
-          <ng-template pTemplate="body" let-doc>
-              <tr>
-                  <td>{{doc.name}}</td>
-                  <td>{{doc.city.name}}</td>
-                  <td>{{doc.profession.name}}</td>
-                  <td><p-rating [(ngModel)]="doc.rating" [cancel]="false" [readonly]="true"></p-rating></td>
-                  <td>
-                    <i class="pi pi-pencil pointer" (click)="onSelectDoctor(doc)"></i>
-                    <i class="pi pi-trash pointer" (click)="onDeleteDoctor(doc)"></i>
-                    <i class="pi pi-print pointer" (click)="onPrintDoctor(doc)"></i>
-                  </td>
-              </tr>
-          </ng-template>
-      </p-table>
-      <span *ngIf="filteredDoctors.length === 0">Ok, your demand has recorded. We'll find a doctor for you.</span>
-  </div>
-
-</div>
+<router-outlet></router-outlet>
